--- a/Home/index.html
+++ b/Home/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MouseConcert</title>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Puddles&family=Delius&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Puddles&family=Delius&display=swap" rel="stylesheet" />
   <style>
     html, body {
       margin: 0;
@@ -45,6 +45,7 @@
     .button-group {
       display: flex;
       gap: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     .button-group button {
@@ -102,14 +103,112 @@
       80% { transform: translate(1px, -1px); }
       100% { transform: translate(0); }
     }
+
+    /* Nav bar */
+    nav {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      display: flex;
+      gap: 1rem;
+      z-index: 1000;
+    }
+
+    nav button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 5px;
+      background: rgba(255 255 255 / 0.6);
+      cursor: pointer;
+      font-family: 'Delius', cursive;
+      transition: background 0.3s ease;
+      backdrop-filter: blur(5px);
+    }
+
+    nav button:hover {
+      background: rgba(255 255 255 / 0.9);
+    }
+
+    /* Modal styles */
+    .modal-overlay {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+    }
+
+    .modal-overlay.active {
+      display: flex;
+    }
+
+    .modal {
+      background: white;
+      border-radius: 12px;
+      max-width: 400px;
+      padding: 1.5rem 2rem;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      font-family: 'Delius', cursive;
+      color: #222;
+      text-align: center;
+      position: relative;
+    }
+
+    .modal h2 {
+      margin-top: 0;
+    }
+
+    .modal button.close-btn {
+      position: absolute;
+      top: 10px;
+      right: 12px;
+      border: none;
+      background: none;
+      font-size: 1.3rem;
+      cursor: pointer;
+      color: #666;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
+  <nav>
+    <button id="about-btn">About</button>
+    <button id="info-btn">Info</button>
+  </nav>
+
   <h1>MouseConcert</h1>
+
   <div class="button-group">
-    <button onclick="location.href='http://127.0.0.1:5500/Random/index.html'">Random</button>
+    <button onclick="location.href='http://127.0.0.1:5500/Final-MouseConcert/Random/index.html'">Random</button>
     <button id="glitch-btn">Glitch</button>
     <button onclick="location.href='elegant.html'">Elegant</button>
+  </div>
+
+  <!-- About Modal -->
+  <div class="modal-overlay" id="about-modal">
+    <div class="modal">
+      <button class="close-btn" aria-label="Close">&times;</button>
+      <h2>About MouseConcert</h2>
+      <p>
+        MouseConcert is an interactive music experience controlled by your mouse movements.
+        It explores a variety of visual styles and musical genres, offering a unique audiovisual journey with each site.
+      </p>
+    </div>
+  </div>
+
+  <!-- Info Modal -->
+  <div class="modal-overlay" id="info-modal">
+    <div class="modal">
+      <button class="close-btn" aria-label="Close">&times;</button>
+      <h2>Project Info</h2>
+      <p><strong>Class:</strong> Introduction to Computation</p>
+      <p><strong>Professor:</strong> Gabriel Drozdov</p>
+      <p><strong>Coder:</strong> Jiayao Dou</p>
+    </div>
   </div>
 
   <script>
@@ -132,8 +231,38 @@
       glitchBtn.classList.add('glitch');
       setTimeout(() => {
         glitchBtn.classList.remove('glitch');
-        location.href = 'http://127.0.0.1:5500/Pixel/index.html';
+        location.href = 'http://127.0.0.1:5500/Final-MouseConcert/Pixel/index.html';
       }, 400);
+    });
+
+    // Modal open/close logic
+    const aboutBtn = document.getElementById('about-btn');
+    const infoBtn = document.getElementById('info-btn');
+    const aboutModal = document.getElementById('about-modal');
+    const infoModal = document.getElementById('info-modal');
+    const closeButtons = document.querySelectorAll('.modal .close-btn');
+
+    aboutBtn.addEventListener('click', () => {
+      aboutModal.classList.add('active');
+    });
+
+    infoBtn.addEventListener('click', () => {
+      infoModal.classList.add('active');
+    });
+
+    closeButtons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        btn.closest('.modal-overlay').classList.remove('active');
+      });
+    });
+
+    // Close modal if clicking outside modal content
+    [aboutModal, infoModal].forEach(modal => {
+      modal.addEventListener('click', e => {
+        if (e.target === modal) {
+          modal.classList.remove('active');
+        }
+      });
     });
   </script>
 </body>
