--- a/Random/index.html
+++ b/Random/index.html
@@ -184,7 +184,7 @@
     </div>
     
     <div id="nav">
-        <button onclick="window.open('http://127.0.0.1:5500/Home/index.html')">Return to Home</button>
+        <button onclick="window.open('http://127.0.0.1:5500/Final-MouseConcert/Home/index.html')">Return to Home</button>
         <button onclick="toggleAbout()">About</button>
       </div>
       
