--- a/Home/index.html
+++ b/Home/index.html
@@ -182,7 +182,7 @@
   <div class="button-group">
     <button onclick="location.href='http://127.0.0.1:5500/Final-MouseConcert/Random/index.html'">Random</button>
     <button id="glitch-btn">Glitch</button>
-    <button onclick="location.href='elegant.html'">Elegant</button>
+    <button onclick="location.href='http://127.0.0.1:5500/Final-MouseConcert/Lines/index.html'">Line</button>
   </div>
 
   <div class="modal-overlay" id="about-modal">
