--- a/Lines/index.html
+++ b/Lines/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LineMusic</title>
+  <title>Interactive Particle Sound Network</title>
   <style>
     body {
       margin: 0;
@@ -11,11 +11,131 @@
     canvas {
       display: block;
     }
+
+#nav {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 1001;
+  display: flex;
+  gap: 10px;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 6px 10px;
+  border-radius: 8px;
+ }
+ 
+#nav button {
+  background: transparent;
+  color: rgb(252, 254, 227);
+  border: 1px solid rgba(252, 254, 227, 0.5);
+  font-family: 'Rubik Pixels', cursive;
+  padding: 4px 8px;
+  cursor: pointer;
+  font-size: 0.8rem;
+}
+
+#nav button:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#about-box {
+  position: fixed;
+  top: 60px;
+  left: 10px;
+  width: 260px;
+  background: rgba(0, 0, 0, 0.7);
+  border: 1px solid rgba(252, 254, 227, 0.4);
+  color: rgb(252, 254, 227);
+  padding: 10px;
+  font-family: 'Courier New', monospace;
+  font-size: 0.9rem;
+  display: none;
+  z-index: 1001;
+  border-radius: 6px;
+}
+
+#about-box a {
+  color: #fcffc8;
+  text-decoration: underline;
+}
+
+#opening-screen {
+  position: fixed;
+  z-index: 1002;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(circle at center, #1a1a2d, #0f0f1a);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Courier New', monospace;
+  color: #fcffc8;
+  text-align: center;
+  transition: opacity 1s ease;
+}
+
+#opening-content {
+  background: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(252, 254, 227, 0.4);
+  padding: 30px;
+  border-radius: 10px;
+  max-width: 400px;
+}
+
+#opening-content h1 {
+  font-family: 'Rubik Pixels', cursive;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+}
+
+#opening-content p {
+  margin: 10px 0;
+  font-size: 0.9rem;
+}
+
+#opening-content button {
+  margin-top: 20px;
+  padding: 8px 16px;
+  background: transparent;
+  border: 1px solid rgba(252, 254, 227, 0.7);
+  color: #fcffc8;
+  font-size: 0.9rem;
+  font-family: 'Rubik Pixels', cursive;
+  cursor: pointer;
+}
+
+#opening-content button:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
   </style>
 </head>
 <body>
+  <div id="opening-screen">
+    <div id="opening-content">
+      <h1>Line Music</h1>
+      <p>Move your mouse to interact with particles.</p>
+      <p>Lines between particles near the mouse will play different sounds.</p>
+      <p>Let's start!</p>
+      <button onclick="startExperience()">Start</button>
+    </div>
+  </div>
+
   <canvas id="particleCanvas"></canvas>
 
+  <div id="nav">
+    <button onclick="window.open('http://127.0.0.1:5500/Final-MouseConcert/Home/index.html')">Return to Home</button>
+    <button onclick="toggleAbout()">About</button>
+  </div>
+  
+  <div id="about-box">
+    <p>Move your mouse to interact with particles.</p>
+    <p>Lines between particles near the mouse will play different sounds.</p>
+    <button onclick="toggleAbout()">Close</button>
+  </div>
+  
   <script>
     const canvas = document.getElementById('particleCanvas');
     const ctx = canvas.getContext('2d');
@@ -23,11 +143,13 @@
     canvas.height = window.innerHeight;
 
     const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    let lastSoundTime = 0;
+    const soundCooldown = 50;
 
     const mouse = {
       x: null,
       y: null,
-      radius: 100
+      radius: 150
     };
 
     window.addEventListener('mousemove', e => {
@@ -50,6 +172,7 @@
         this.baseY = y;
         this.density = (Math.random() * 30) + 1;
         this.color = `hsl(${Math.random() * 60 + 200}, 100%, 50%)`;
+        this.soundFrequency = 200 + Math.random() * 800;
       }
 
       draw() {
@@ -77,6 +200,12 @@
         if (distance < mouse.radius) {
           this.x -= directionX;
           this.y -= directionY;
+          
+          // 当粒子被鼠标影响时，有几率播放声音
+          if (Math.random() < 0.02 && Date.now() - lastSoundTime > soundCooldown) {
+            playSound(this.soundFrequency);
+            lastSoundTime = Date.now();
+          }
         } else {
           if (this.x !== this.baseX) {
             const dx = this.x - this.baseX;
@@ -93,7 +222,7 @@
     }
 
     let particles = [];
-    const particleCount = (canvas.width * canvas.height) / 9000;
+    const particleCount = (canvas.width * canvas.height) / 5000; // 增加粒子密度
 
     function init() {
       particles = [];
@@ -107,18 +236,23 @@
     function playSound(frequency) {
       const oscillator = audioCtx.createOscillator();
       const gainNode = audioCtx.createGain();
+      const panNode = audioCtx.createStereoPanner();
+      
+      // 根据粒子位置设置声相
+      panNode.pan.value = (frequency - 600) / 600; // -1到1之间
 
-      oscillator.type = 'sine';
+      oscillator.type = ['sine', 'square', 'sawtooth', 'triangle'][Math.floor(Math.random() * 4)];
       oscillator.frequency.value = frequency;
 
-      oscillator.connect(gainNode);
+      oscillator.connect(panNode);
+      panNode.connect(gainNode);
       gainNode.connect(audioCtx.destination);
 
-      gainNode.gain.setValueAtTime(0.05, audioCtx.currentTime);
-      gainNode.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.3);
+      gainNode.gain.setValueAtTime(0.1, audioCtx.currentTime);
+      gainNode.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.5);
 
       oscillator.start();
-      oscillator.stop(audioCtx.currentTime + 0.4);
+      oscillator.stop(audioCtx.currentTime + 0.6);
     }
 
     function animate() {
@@ -130,8 +264,8 @@
           const dy = particles[i].y - particles[j].y;
           const distance = Math.sqrt(dx * dx + dy * dy);
 
-          if (distance < 100) {
-            const opacity = 1 - distance / 100;
+          if (distance < 120) {
+            const opacity = 1 - distance / 120;
             ctx.strokeStyle = `rgba(100, 200, 255, ${opacity})`;
             ctx.lineWidth = 0.5;
             ctx.beginPath();
@@ -146,9 +280,10 @@
             const midY = (particles[i].y + particles[j].y) / 2;
             const distToMouse = Math.hypot(mx - midX, my - midY);
 
-            if (distToMouse < 50 && Math.random() < 0.01) { // 几率控制，避免太吵
-              const freq = 200 + (particles[i].x / canvas.width) * 800;
+            if (distToMouse < 80 && Math.random() < 0.05 && Date.now() - lastSoundTime > soundCooldown) {
+              const freq = 200 + (midX / canvas.width) * 1000;
               playSound(freq);
+              lastSoundTime = Date.now();
             }
           }
         }
@@ -159,8 +294,42 @@
       requestAnimationFrame(animate);
     }
 
+    // 点击页面时触发一系列声音
+    canvas.addEventListener('click', () => {
+      for (let i = 0; i < 10; i++) {
+        setTimeout(() => {
+          playSound(200 + Math.random() * 1000);
+        }, i * 100);
+      }
+    });
+
     init();
     animate();
+
+    document.getElementById('about-btn').addEventListener('click', () => {
+  document.getElementById('about-popup').style.display = 'block';
+});
+
+document.getElementById('close-about').addEventListener('click', () => {
+  document.getElementById('about-popup').style.display = 'none';
+});
+
+function toggleAbout() {
+  const box = document.getElementById('about-box');
+  if (box.style.display === 'block') {
+    box.style.display = 'none';
+  } else {
+    box.style.display = 'block';
+  }
+}
+function startExperience() {
+  const opening = document.getElementById('opening-screen');
+  opening.style.opacity = 0;
+  setTimeout(() => {
+    opening.style.display = 'none';
+  }, 1000);
+}
+
   </script>
 </body>
 </html>
