--- a/Random/index.html
+++ b/Random/index.html
@@ -471,7 +471,9 @@
         }
         }
 
-//
+//Chat generated the draft that we seen from the prompt, then I biuld up from that
+//https://www.open3d.org/docs/latest/python_api/open3d.visualization.Visualizer.html
+
     </script>
 </body>
 </html>
