--- a/Lines/index.html
+++ b/Lines/index.html
@@ -126,7 +126,7 @@
   <canvas id="particleCanvas"></canvas>
 
   <div id="nav">
-    <button onclick="window.open('http://127.0.0.1:5500/index.html')">Return to Home</button>
+    <button onclick="window.open('http://127.0.0.1:5500/Final-MouseConcert/index.html')">Return to Home</button>
     <button onclick="toggleAbout()">About</button>
   </div>
   
