--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
   <h1>MouseConcert</h1>
 
   <div class="button-group">
-    <button onclick="location.href='http://127.0.0.1:5500/Final-MouseConcert/Random/index.html'">Random</button>
+    <button onclick="location.href='Random/'">Random</button>
     <button id="glitch-btn">Glitch</button>
-    <button onclick="location.href='http://127.0.0.1:5500/Final-MouseConcert/Lines/index.html'">Line</button>
+    <button onclick="location.href='Lines/'">Line</button>
   </div>
 
   <div class="modal-overlay" id="about-modal">
@@ -238,8 +238,8 @@
       aboutModal.classList.add('active');
     });
 
-    infoBtn.addEventLstener('click', () => {
-      infoModal.classList.add('active');
+   infoBtn.addEventListener('click', () => {
+    infoModal.classList.add('active');
     });
 
     closeButtons.forEach(btn => {
