--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
   <div class="button-group">
     <button onclick="location.href='Random/'">Random</button>
-    <button id="glitch-btn">Glitch</button>
+    <button onclick="location.href='pixel/'">Glitch</button>
     <button onclick="location.href='Lines/'">Line</button>
   </div>
 
